--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -7,7 +7,11 @@
     "module": "commonjs",
     "noImplicitAny": true,
     "outDir": "./dist",
-    "target": "es5"
+    "target": "es5",
+    "baseUrl": ".",
+    "paths": {
+      "src/*": [ "src/*" ]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["dist", "node_modules", "test"]
