--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint -c .eslintrc.js --ext .ts src test",
-    "build": "rollup -c && tsc -p tsconfig.prod.json",
+    "build": "rollup -c",
     "watch": "rollup -cw",
     "prepare": "npm run test"
   },
@@ -19,7 +19,9 @@
   "author": "Patrick Smith <patrick.smith@kashew.net>",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.0.0",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.1.0",
     "@types/axios": "^0.14.0",
     "@types/faker": "^5.1.5",
     "@types/jest": "^26.0.19",
@@ -32,6 +34,7 @@
     "jest": "^26.6.3",
     "nock": "^13.0.5",
     "rollup": "^2.34.2",
+    "rollup-plugin-typescript2": "^0.29.0",
     "ts-jest": "^26.4.4",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3"
