--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -4,7 +4,8 @@
     "declaration": true,
     "declarationDir": "./dist",
     "esModuleInterop": true,
-    "module": "commonjs",
+    "module": "es6",
+    "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./dist",
     "target": "es5",
