--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,27 @@
     "declaration": true,
     "declarationDir": "./dist",
     "esModuleInterop": true,
-    "module": "commonjs",
+    "module": "es6",
+    "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./dist",
     "target": "es5",
     "baseUrl": ".",
     "paths": {
-      "src/*": [ "src/*" ]
+      "@/*": [
+        "src/*"
+      ],
+      "@": [
+        "src"
+      ]
     }
   },
-  "include": ["src/**/*", "test/**/*"],
-  "exclude": ["dist", "node_modules"]
+  "include": [
+    "src/**/*",
+    "test/**/*"
+  ],
+  "exclude": [
+    "dist",
+    "node_modules"
+  ]
 }
