--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "rootDir": "./src",
     "declaration": true,
     "declarationDir": "./dist",
     "esModuleInterop": true,
@@ -8,12 +7,14 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./dist",
-    "target": "es5",
-    "baseUrl": ".",
-    "paths": {
-      "src/*": [ "src/*" ]
-    }
+    "target": "es5"
   },
-  "include": ["src/**/*"],
-  "exclude": ["dist", "node_modules", "test"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "dist",
+    "node_modules",
+    "test"
+  ]
 }
