--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@types/axios": "^0.14.0",
+    "@types/crypto-js": "^4.0.1",
     "@types/faker": "^5.1.5",
     "@types/jest": "^26.0.19",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
@@ -38,6 +39,7 @@
     "eslint-plugin-prefer-arrow": "^1.2.2",
     "faker": "^5.1.0",
     "jest": "^26.6.3",
+    "jest-mock-now": "^1.3.0",
     "nock": "^13.0.5",
     "rollup": "^2.34.2",
     "rollup-plugin-typescript2": "^0.29.0",
@@ -47,6 +49,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0"
   }
 }
